Removes unneeded test and fixes scrollbar issue

--- a/src/index.css
+++ b/src/index.css
@@ -9,12 +9,17 @@
   font-weight: 400;
 }
 
+html {
+  overflow: hidden;
+}
+
 body {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  overflow: auto;
 }
 
 #root {
